name:                catalog-server
version:             0.1.2.0
synopsis:            Scotty server for catalog
description:         Please see README.md
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable catalog-server
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , catalog
                     , filepath
                     , http-types            >= 0.9
                     , monad-reader-state-err-io
                     , mtl
                     , scotty                >= 0.1.10
                     , text
                     , transformers
                     , wai                   >= 3.2
                     , wai-extra             >= 3.0.0
                     , wai-middleware-static
                     , warp                  >= 3.2.2

  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog
