name:                catalog-sync
version:             0.1.1.0
synopsis:            Catalog sync
description:         Please see README.md
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable catalog-sync
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , catalog
                     , monad-error-rws-io
                     , mtl
                     , text
                     , transformers
                     , unix
                     
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
