Name:                photo2
Version:             0.1.1
Synopsis:            Photo Album Editor
Description:         Photo Album Editor
License:             BSD3
License-file:        LICENSE
Author:              Uwe
Build-type:          Simple
Cabal-version:       >=1.8


Executable photo2
  Main-is:             Photo2.hs

  Hs-Source-Dirs:      . ../src
  
  Build-depends:        base                   >=4    && < 5
                      , bytestring             >= 0.9
                      , containers             >= 0.4
                      , deepseq                >= 1.1
                      , directory              >= 1
                      , haskeline              >= 0.6.4
                      , find-grep-sed          >= 0.1  
                      , filepath               >= 1.2
                      , haskell98              >= 1.1
                      , hxt                    >= 9.1 && < 10
                      , hxt-regex-xmlschema    >= 9   && < 10
                      , mtl                    >= 2
                      , old-locale             >= 1
                      , old-time               >= 1
                      , process                >= 1
                      , unix                   >= 2.4

  Other-modules:        Photo2.CmdInterpreter
                      , Photo2.ArchiveTypes

  
  Extensions:           

  Ghc-Options:          -threaded -Wall -rtsopts -fwarn-tabs
