Name:                photoEdit
Version:             0.1
Synopsis:            Photo Album Editor with GTK
Description:         Photo Album Editor with GTK
License:             BSD3
Author:              Uwe
Build-type:          Simple
Cabal-version:       >=1.8


Executable photoEdit
  Main-is:             PhotoEdit.hs

  Hs-Source-Dirs:      . ../src
  
  Build-depends:        base                   >=4    && < 5
                      , bytestring             >= 0.9
                      , containers             >= 0.4
                      , deepseq                >= 1.1
                      , directory              >= 1
                      , editline               >= 0.2
                      , find-grep-sed          >= 0.1  
                      , filepath               >= 1.2
                      , glade                  >= 0.12
                      , gtk                    >= 0.12
                      , haskell98              >= 1.1
                      , hxt                    >= 9.1 && < 10
                      , hxt-regex-xmlschema    >= 9   && < 10
                      , mtl                    >= 2
                      , old-locale             >= 1
                      , old-time               >= 1
                      , process                >= 1
                      , unix                   >= 2.4

  Other-modules:        Photo2.ArchiveTypes
                      , Photo2.ModelInterface
                      , Photo2.FilePath
  
  Extensions:           

  Ghc-Options:          -threaded -Wall -rtsopts
                        -fwarn-tabs
                        -fno-warn-unused-do-bind
                        -fno-warn-missing-signatures
                        -fno-warn-name-shadowing
