name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/apps/toys/adventofcode.com
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
copyright:           Copyright (c) 2017- Uwe Schmidt
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Util.Main1
                                                                     
  other-modules:
  
  build-depends:       base >= 4 && < 5
                     , optparse-applicative

  default-language:    Haskell2010

executable 2017-01
  main-is:             Year17/Day01/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-02
  main-is:             Year17/Day02/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-03
  main-is:             Year17/Day03/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-09
  main-is:             Year17/Day09/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , parsec
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-10
  main-is:             Year17/Day10/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1
                     , Year17.Day10.TyingTheKnot

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-11
  main-is:             Year17/Day11/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-12
  main-is:             Year17/Day12/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1
                     , Data.Relation

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , containers
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-13
  main-is:             Year17/Day13/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

executable 2017-14
  main-is:             Year17/Day14/Main.hs
  hs-source-dirs:      .
  
  other-modules:       Util.Main1
                     , Data.Relation
                     , Year17.Day10.Tyingtheknot

  build-depends:       base >= 4.7 && < 5
                     , adventofcode
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/toys/adventofcode.com
